# pylance-test

./: pyproject.toml
src/: example.py
